reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_with_variant_skip.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestEnumWithVariantSkip>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::TestEnumWithVariantSkip"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::TestEnumWithVariantSkip"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumWithVariantSkip"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumWithVariantSkip"
      }
    ]
  }
}
