reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_with_variant_skip_deserialize.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "(TestEnumWithVariantSkipDeserialize::reflect_input(),\n    TestEnumWithVariantSkipDeserialize::reflect_output())"
---
[
  [
    {
      "name": "reflect_demo::tests::serde::TestEnumWithVariantSkipDeserialize"
    },
    {
      "types": [
        {
          "kind": "enum",
          "name": "reflect_demo::tests::serde::TestEnumWithVariantSkipDeserialize"
        }
      ]
    }
  ],
  [
    {
      "name": "reflect_demo::tests::serde::TestEnumWithVariantSkipDeserialize"
    },
    {
      "types": [
        {
          "kind": "enum",
          "name": "reflect_demo::tests::serde::TestEnumWithVariantSkipDeserialize",
          "variants": [
            {
              "name": "_Variant1"
            }
          ]
        }
      ]
    }
  ]
]
